test/corpus/basic.txt
================================================================================
Simple variable
================================================================================

opam-version: "2.0"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (atom
      (string))))

================================================================================
Variable with list value
================================================================================

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (prefix_relop
          operator: (relop)
          value: (atom
            (string))))
      values: (option_value
        value: (atom
          (string))
        options: (prefix_relop
          operator: (relop)
          value: (atom
            (string)))))))

================================================================================
Section without name
================================================================================

build: [
  ["./configure"]
  ["dune" "build" "-p" name]
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (list
        values: (atom
          (string)))
      values: (list
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (ident))))))

================================================================================
Section with name
================================================================================

url {
  src: "https://example.com/package.tar.gz"
}

--------------------------------------------------------------------------------

(source_file
  (section
    kind: (ident)
    items: (variable
      name: (ident)
      value: (atom
        (string)))))

================================================================================
Comments
================================================================================

# This is a line comment
opam-version: "2.0"
(* This is a block comment *)
version: "1.0"

--------------------------------------------------------------------------------

(source_file
  (comment)
  (variable
    name: (ident)
    value: (atom
      (string)))
  (comment
    (block_comment))
  (variable
    name: (ident)
    value: (atom
      (string))))

================================================================================
Nested block comments
================================================================================

(* outer (* inner *) outer *)
opam-version: "2.0"

--------------------------------------------------------------------------------

(source_file
  (comment
    (block_comment))
  (variable
    name: (ident)
    value: (atom
      (string))))

================================================================================
Double-nested block comments
================================================================================

(* a (* b (* c *) b *) a *)
opam-version: "2.0"

--------------------------------------------------------------------------------

(source_file
  (comment
    (block_comment))
  (variable
    name: (ident)
    value: (atom
      (string))))

================================================================================
Block comment with stars inside
================================================================================

(* this has ** stars ** inside *)
opam-version: "2.0"

--------------------------------------------------------------------------------

(source_file
  (comment
    (block_comment))
  (variable
    name: (ident)
    value: (atom
      (string))))

================================================================================
Logical operations
================================================================================

available: os != "win32" & arch = "x86_64"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (logop_value
      left: (relop_value
        left: (atom
          (ident))
        operator: (relop)
        right: (atom
          (string)))
      right: (relop_value
        left: (atom
          (ident))
        operator: (relop)
        right: (atom
          (string))))))

================================================================================
Environment binding
================================================================================

setenv: PATH += "/usr/local/bin"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (env_binding
      variable: (atom
        (ident))
      operator: (envop)
      value: (atom
        (string)))))

================================================================================
Prefix operations
================================================================================

depends: [
  "package" {!system}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (pfxop_value
          operator: (pfxop)
          value: (atom
            (ident)))))))
