test/corpus/build_commands.txt
================================================================================
Simple build command
================================================================================

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (list
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (ident))
        values: (atom
          (string))
        values: (atom
          (ident))))))

================================================================================
Build with conditional step
================================================================================

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (list
          values: (atom
            (string))
          values: (atom
            (string)))
        options: (atom
          (filter_ident)))
      values: (list
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (ident))
        values: (atom
          (string))
        values: (atom
          (ident))))))

================================================================================
Complex build with multiple conditionals
================================================================================

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (list
          values: (atom
            (string))
          values: (atom
            (string)))
        options: (atom
          (filter_ident)))
      values: (list
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (ident))
        values: (atom
          (string))
        values: (atom
          (ident))
        values: (atom
          (string))
        values: (option_value
          value: (atom
            (string))
          options: (atom
            (filter_ident)))
        values: (option_value
          value: (atom
            (string))
          options: (atom
            (filter_ident)))))))

================================================================================
Build with variable interpolation
================================================================================

build: [
  [
    "dune"
    "exec"
    "-p"
    name
    "src/unix/config/discover.exe"
    "--"
    "--save"
    "--use-libev" "%{conf-libev:installed}%"
  ]
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (list
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (ident))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string
            (interpolation
              (interpolation_content))))))))

================================================================================
OCaml bootstrap build
================================================================================

build: [
  ["ocaml" "boot/bootstrap.ml" "-j" jobs]
  ["./_boot/dune.exe" "build" "dune.install" "--release" "--profile" "dune-bootstrap" "-j" jobs]
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (list
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (ident)))
      values: (list
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (ident))))))
