test/corpus/dependencies.txt
================================================================================
Simple dependency with version constraint
================================================================================

depends: [
  "ocaml" {>= "4.08.0"}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (prefix_relop
          operator: (relop)
          value: (atom
            (string)))))))

================================================================================
Multiple version constraints with AND
================================================================================

depends: [
  "ocaml" {>= "4.08.0" & < "5.5.0"}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (logop_value
          left: (prefix_relop
            operator: (relop)
            value: (atom
              (string)))
          right: (prefix_relop
            operator: (relop)
            value: (atom
              (string))))))))

================================================================================
Dependencies with filters
================================================================================

depends: [
  "cppo" {build & >= "1.1.0"}
  "odoc" {with-doc & >= "2.3.0"}
  "bisect_ppx" {with-test}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (logop_value
          left: (atom
            (filter_ident))
          right: (prefix_relop
            operator: (relop)
            value: (atom
              (string)))))
      values: (option_value
        value: (atom
          (string))
        options: (logop_value
          left: (atom
            (filter_ident))
          right: (prefix_relop
            operator: (relop)
            value: (atom
              (string)))))
      values: (option_value
        value: (atom
          (string))
        options: (atom
          (filter_ident))))))

================================================================================
Exact version match
================================================================================

depends: [
  "ocamlformat" {with-dev-setup & = "0.26.2"}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (logop_value
          left: (atom
            (filter_ident))
          right: (prefix_relop
            operator: (relop)
            value: (atom
              (string))))))))

================================================================================
Optional dependencies (depopts)
================================================================================

depopts: ["base-threads" "base-unix" "conf-libev"]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (atom
        (string))
      values: (atom
        (string))
      values: (atom
        (string)))))

================================================================================
Conflicts section
================================================================================

conflicts: [
  "merlin" {< "3.4.0"}
  "jbuilder" {= "transition"}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (prefix_relop
          operator: (relop)
          value: (atom
            (string))))
      values: (option_value
        value: (atom
          (string))
        options: (prefix_relop
          operator: (relop)
          value: (atom
            (string)))))))
