test/corpus/filters_and_availability.txt
================================================================================
OS filter
================================================================================

available: os != "win32"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (relop_value
      left: (atom
        (ident))
      operator: (relop)
      right: (atom
        (string)))))

================================================================================
Architecture filter
================================================================================

available: arch != "x86_32"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (relop_value
      left: (atom
        (ident))
      operator: (relop)
      right: (atom
        (string)))))

================================================================================
Opam version filter
================================================================================

available: opam-version >= "2.1.0"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (relop_value
      left: (atom
        (ident))
      operator: (relop)
      right: (atom
        (string)))))

================================================================================
Complex OS filter with AND
================================================================================

available: os != "win32" & arch = "x86_64"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (logop_value
      left: (relop_value
        left: (atom
          (ident))
        operator: (relop)
        right: (atom
          (string)))
      right: (relop_value
        left: (atom
          (ident))
        operator: (relop)
        right: (atom
          (string))))))

================================================================================
Complex filter with OR
================================================================================

available: os = "linux" | os = "macos"

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (logop_value
      left: (env_binding
        variable: (atom
          (ident))
        operator: (envop)
        value: (atom
          (string)))
      right: (relop_value
        left: (atom
          (ident))
        operator: (relop)
        right: (atom
          (string))))))

================================================================================
Negation filter
================================================================================

depends: [
  "package" {!windows}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (pfxop_value
          operator: (pfxop)
          value: (atom
            (ident)))))))

================================================================================
Defined check filter
================================================================================

depends: [
  "package" {?installed}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (pfxop_value
          operator: (pfxop)
          value: (atom
            (ident)))))))

================================================================================
Solo filter ident
================================================================================

depends: ["pkg" {build}]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (atom
          (filter_ident))))))

================================================================================
Negated filter ident
================================================================================

depends: ["pkg" {!build}]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (pfxop_value
          operator: (pfxop)
          value: (atom
            (filter_ident)))))))

================================================================================
Combined filter idents
================================================================================

depends: ["pkg" {build & with-test}]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (logop_value
          left: (atom
            (filter_ident))
          right: (atom
            (filter_ident)))))))

================================================================================
All seven filter idents
================================================================================

depends: [
  "a" {build}
  "b" {post}
  "c" {with-test}
  "d" {with-doc}
  "e" {with-dev-setup}
  "f" {pinned}
  "g" {dev}
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (option_value
        value: (atom
          (string))
        options: (atom
          (filter_ident)))
      values: (option_value
        value: (atom
          (string))
        options: (atom
          (filter_ident)))
      values: (option_value
        value: (atom
          (string))
        options: (atom
          (filter_ident)))
      values: (option_value
        value: (atom
          (string))
        options: (atom
          (filter_ident)))
      values: (option_value
        value: (atom
          (string))
        options: (atom
          (filter_ident)))
      values: (option_value
        value: (atom
          (string))
        options: (atom
          (filter_ident)))
      values: (option_value
        value: (atom
          (string))
        options: (atom
          (filter_ident))))))

================================================================================
Filter ident as field name stays ident
================================================================================

build: [
  ["dune" "build" "-p" name]
]

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (ident)
    value: (list
      values: (list
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (string))
        values: (atom
          (ident))))))
